--- a/BestNews/Info.plist
+++ b/BestNews/Info.plist
@@ -46,7 +46,7 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
-	<key>FirebaseAppDelegateProxyEnabled</key>
-	<false/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Presse OK to add profileimage for yourself</string>
 </dict>
 </plist>
